fixed the calendar being too high

--- a/trunk/goograde/WEB-INF/web/styles/goograde.css
+++ b/trunk/goograde/WEB-INF/web/styles/goograde.css
@@ -122,7 +122,7 @@ td.alt{
 }
 #ui-datepicker-div{
     z-index: 199;
-    top: 115px !important;
+    top: 140px !important;
 
 }
 
